# BTC

./: .env.example  .gitignore  .vercelignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  build_vercel.py  docker-compose.yml  forecast_core.py  forecast_store.py  intelligence.py  pyproject.toml  vercel.json
config/: connectors.example.yaml  github-actions-ci.yml.example
src/alpha_engine/: __init__.py  api.py  cli.py  config.py  forecast_tracking.py  logging.py  modeling.py  paper.py  pipeline.py  risk.py  tracking.py  types.py
src/alpha_engine/backtesting/: __init__.py  engine.py  walk_forward.py
src/alpha_engine/research/: __init__.py  features.py  hypotheses.py  leakage.py  regimes.py  similarity.py
src/alpha_engine/web/: dashboard.html
tests/: test_api.py  test_backtest.py  test_features.py  test_forecasts.py  test_intelligence.py  test_pipeline.py  test_risk.py  test_similarity.py  test_vercel_adapter.py
