[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto-alpha-engine"
version = "0.1.0"
description = "Leakage-aware crypto alpha research and paper-trading engine"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
  "duckdb>=1.1,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "pyarrow>=17,<20",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "psycopg[binary]>=3.2,<4",
  "scikit-learn>=1.5,<2",
  "typer>=0.12,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pandas-stubs>=2.2,<3",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "respx>=0.21,<1",
  "ruff>=0.7,<1",
]
tracking = ["mlflow>=2.17,<4"]

[project.scripts]
alpha = "alpha_engine.cli:app"

[tool.vercel.scripts]
build = "python build_vercel.py"

[tool.hatch.build.targets.wheel]
packages = ["src/alpha_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/alpha_engine/api.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["alpha_engine"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "dashboard_content"]
ignore_missing_imports = true
